--- a/hapijs/package.json
+++ b/hapijs/package.json
@@ -10,6 +10,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "hapi": "^17.6.0"
+    "hapi": "16.1.1",
+    "hapi-cors-headers": "^1.0.3",
+    "mysql": "^2.16.0",
+    "mysql2": "^1.6.1",
+    "sequelize": "^4.41.0"
   }
 }
